[gd_scene load_steps=5 format=3 uid="uid://qowtue1mixmv"]

[ext_resource type="Theme" uid="uid://b7mucilgoxfdw" path="res://theme.tres" id="1_e0p6d"]
[ext_resource type="Script" path="res://inventory/slot.gd" id="1_lvts8"]

[sub_resource type="ImageTexture" id="ImageTexture_ufp6k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pbgqk"]
region = Rect2(0, 0, 32, 32)

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(4, 4)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_e0p6d")
script = ExtResource("1_lvts8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PlaceHolder" type="TextureRect" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
texture = SubResource("ImageTexture_ufp6k")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_pbgqk")
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 4
text = "x99"

[node name="WeightLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 4
text = "1.0"
vertical_alignment = 2
